the few cases where you know that that is a very small node and it rarely has
users, then you can do a set/routepc19 <node> to enable PC19 propagation. In
the even more rare case of you wanting to prevent PC19s being routed thru 
your node, you can use unset/routepc19. THIS IS NOT A SUBSTITUTE FOR ROUTE
FILTERING!!!!! [translators: I have added wpc16s, wpc16u, wpc19s, wpc19u]
17Jan03=======================================================================
1. Fix problem with lines being left in the main input queue for a 
disconnected/ing node.
14Jan03=======================================================================
1. Tidy up AUTOLOAD functions
2. Make sure that empty PC16s are not sent on startup to a node.
12Jan03=======================================================================
1. add Czech language courtesy of Milan OK1XH
06Jan03=======================================================================
1. add the latest changes to the spider-web java interface from Rene, OZ1LQH.
Please note that there is a change to the spider.cgi file this time so that
the client show 'Connected to Node_Call' instead of the hostname.  You will
need to update your cgi file when you update the changes.  Please make sure
that you back up your old files first! (g0vgs)
2. yet more changes to the java client from Rene :-)  Also added a makefile
and a Changes file for the client in the spider-web directory.
05Jan03=======================================================================
1. fix some irritating messages caused by protocol loops in sh/c
2. update copyright
3. move GN from GJ to GI
31Dec02=======================================================================
1. Update files in the java client with fixes and additions from Rene, OZ1LQH
05Dec02=======================================================================
1. Fix SSID issues with AGWMsg.
2. updated show/hftable, vhftable, hfstats, vhfstats and dxstats after K1XX